syntax = "proto3";
option csharp_namespace = "Egeshka.Auth.Grpc";

import "google/protobuf/wrappers.proto";

service AuthGrpc {
  rpc Registration(Registration.Request) returns(Registration.Response);
}

message Registration {
  message Request {
    int64 telegram_user_id = 1;
    string mobile_number = 2;
    string first_name = 3;
    google.protobuf.StringValue last_name = 4;
  }

  message Response {
    string registration_token = 5;
  }
}
